mule-user-guide/v/3.7/netsuite-openair-connector.adoc
=  NetSuite OpenAir连接器
:keywords: netsuite, openair, connector
：imagesdir：./_images

*Anypoint Connector for NetSuite OpenAir*是一个封闭的源企业连接器，它提供了OpenAir和第三方软件之间的连接。 OpenAir连接器是使用 link:/anypoint-connector-devkit/v/3.8/[Anypoint连接器DevKit 3.8.1]开发的基于SOAP的连接器。

阅读本用户指南以了解如何使用连接器设置和配置基本流程。使用 link:/release-notes/netsuite-openair-connector-release-notes[OpenAir连接器发行说明]跟踪每个版本的连接器的功能添加，兼容性，限制和API版本更新。使用 http://mulesoft.github.io/mule-netsuite-openair-connector/[连接器ApiDoc技术参考和演示应用程序]查看连接器操作和功能。

MuleSoft在 link:/mule-user-guide/v/3.7/anypoint-connectors#connector-categories[_选择_]支持策略下维护此连接器。

== 先决条件
要使用此连接器，您需要：

*  NetSuite OpenAir实例
* 一组有效的凭证，包括用户名，密码，公司ID，API名称空间和密钥。
*  MuleSoft Enterprise许可证

本文档假定您熟悉Mule，
link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]和
link:/anypoint-studio/v/5/index[Anypoint Studio Essentials]。要提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[基本工作室教程]。此页面假定您了解 link:/mule-user-guide/v/3.7/mule-concepts[骡子概念]， link:/mule-user-guide/v/3.7/elements-in-a-mule-flow[骡子流中的元素]和 link:/mule-user-guide/v/3.7/global-elements[全球元素]。

[NOTE]
====
我们建议您在熟悉连接器时使用 link:http://www.openair.com/download/NetSuiteOpenAirSOAPAPIGuide.pdf[NetSuite OpenAir SOAP API指南]。

OpenAir "complex types"仅限于一组OpenAir操作。
请参阅OpenAir指南以查看对象类型。例如，您可以看到该对象`oaActualCost`适用于"read"，"add"，"modify"和"upsert"方法，而仅适用于对象`oaApproval`与"submit"方法一起使用。
====

== 要求

有关硬件和软件要求，请访问 link:https://docs.mulesoft.com/mule-user-guide/v/3.7/hardware-and-software-requirements[Mule硬件和软件要求]页面。

== 命名空间

[source, xml]
----
xmlns:openair="http://www.mulesoft.org/schema/mule/openair"
----

=== 架构位置

[source, code, linenums]
----
xsi:schemaLocation="
...
http://www.mulesoft.org/schema/mule/openair http://www.mulesoft.org/schema/mule/openair/current/mule-openair.xsd
..."
----

== 兼容性

OpenAir连接器兼容于：

[%header,cols="2*a"]
|===
|应用/服务|版本
| Mule运行时| EE 3.7.0或更高版本
| Anypoint Studio | 5.3或更高版本
| Java | JDK 7
|===

要在生产环境中使用OpenAir连接器，您必须拥有Enterprise许可证才能使用Mule。联系 link:mailto:info@mulesoft.com[MuleSoft销售团队]获取其中任何一个。详细了解 link:/mule-user-guide/v/3.7/installing-an-enterprise-license[安装企业许可证]。


== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。


=== 在新项目中使用连接器

在Mule应用程序项目中使用OpenAir连接器：

. 在Studio中，选择*File*> *New*> *Mule Project*。
. 为您的新项目输入一个名称，并将其余选项保留为默认值。
. 如果您打算使用Git，请选择*Create a .gitignore file*选项，以便项目将为Studio项目使用默认忽略，然后单击*Next*。
. 点击*Finish*创建项目。

== 配置全局元素

要在您的Mule应用程序中使用OpenAir连接器，您必须配置OpenAir连接器可使用的全局OpenAir元素（请参阅 link:/mule-user-guide/v/3.7/global-elements[全球元素]的更多信息。）OpenAir连接器提供一种全局配置，需要以下凭据：{ {1}}，*Password*，*Company ID*，*API Namespace*和*API Key*。

[%header,cols="2*a"]
|===
| {字段{1}}说明
| *Username*  |输入用户名登录到OpenAir。
| *Password*  |输入相应的密码。
| *Company ID*  |输入提供的公司ID。
| *API Namespace*  |输入由NetSuite OpenAir提供的API名称空间。
| *API Key*  |输入由NetSuite OpenAir提供的APIKey
| *Connection Timeout*  |  _默认值：300
| *Read Timeout*  |  _默认值：270
|===

image:openair-config.png[的OpenAir，配置]


配置OpenAir全局元素：

. 确保您在配置文件中包含以下命名空间：
+
[source,xml]
----
xmlns:openair="http://www.mulesoft.org/schema/mule/openair"
----
. 使用以下全局配置代码在流的外部和上方创建全局OpenAir配置：
+
[source,xml,linenums]
----
<openair:config name="OpenAir__Configuration" company="${openair.company}" username="${openair.username}" password="${openair.password}" apiNamespace="${openair.apiNamespace}" apiKey="${openair.apiKey}" doc:name="OpenAir: Configuration"/>
----

[TIP]
====
要启用自动*Reconnection*功能，请执行以下操作：

. 从Studio访问OpenAir Global Element配置窗口。
. 点击"Reconnection"标签。
. 选择"Standard Reconnection"选项。
. 相应地调整"Frequency (ms)"和"Reconnection Attempts"个字段。

添加重新连接功能后，配置XML代码应如下所示：
[source,xml,linenums]
----
<openair:config name="OpenAir__Configuration" company="${openair.company}" username="${openair.username}" password="${openair.password}" apiNamespace="${openair.apiNamespace}" apiKey="${openair.apiKey}" doc:name="OpenAir: Configuration">
        <reconnect/>
</openair:config>
----
====

== 使用连接器

=== 将OpenAir连接器添加到流程中

. 将OpenAir连接器拖放到画布上，然后选择它以打开属性编辑器。
. 通过以下方式配置连接器的参数：
** 选择之前创建的OpenAir配置。
** 从“操作”下拉列表中选择操作，例如加。
** 选择要添加到NetSuite OpenAir实例的`oaObject`，然后生成元数据。
** 将"Request Reference"设置为`#[payload]`。
image:openair-add-config.png[的OpenAir-附加配置]
. 保存您的配置。




== 示例用例

请参阅运行中的OpenAir连接器"Add"操作。

image:openair-use-case-flow.png[的OpenAir-用例流]

. 在Anypoint Studio中创建一个新的Mule项目
. 将HTTP侦听器拖放到画布上并将其配置为在端口8081上侦听。
. 将OpenAir连接器拖放到流中，并按上述配置连接器。 （"Add"操作被选为此用例的演示操作。）
. 在HTTP连接器和OpenAir连接器之间拖放一个*Transform Message*组件。
. 在组件内部，将DataWeave脚本插入到DataWeave编辑器中。该脚本将oaCustomer对象添加到您的NetSuite OpenAir实例。
+
[source, code, linenums]
----
%dw 1.0
%output application/xml
%namespace ns0 http://namespaces.soaplite.com/perl
---
{
	ns0#ArrayOfoaBase: {
		oaBase: {
			oaCustomer: {
				name: "James Bond",
        			company: "MuleSoft"
			},
			oaCustomer: {
				name: "John Doe",
				company: "Pepsi"
			}
		}
	}
}
----
+
. 将另一个*Transform Message*组件拖放到OpenAir连接器之后，并将DataWeave脚本插入到*Transform Message*组件的DataWeave编辑器中。该脚本应该返回新添加的OpenAir对象的ID。
+
[source,code,linenums]
----
%dw 1.0
%output application/json
%namespace ns0 http://namespaces.soaplite.com/perl
---
{
	ID1: payload.ns0#ArrayOfUpdateResult.*updateResult[0].id,
	ID2: payload.ns0#ArrayOfUpdateResult.*updateResult[1].id
}
----
+
. 通过右键单击包资源管理器中的项目名称，选择*Run As*> *Mule Application*，将项目保存并作为Mule应用程序运行。
. 点击您配置的HTTP端点后，浏览器应显示以下JSON：
+
[source, json, linenums]
----
{

    "ID1": "411",
    "ID2": "412"
}
----

=== 示例使用案例代码

将其粘贴到Anypoint Studio中以与本指南中讨论的示例用例应用程序进行交互。

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml"
	xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:context="http://www.springframework.org/schema/context"
	xmlns:openair="http://www.mulesoft.org/schema/mule/openair" xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw"
	xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/openair http://www.mulesoft.org/schema/mule/openair/current/mule-openair.xsd
http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-current.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd">

	<openair:config name="OpenAir__Configuration" company="${openair.company}" username="${openair.username}" password="${openair.password}" apiNamespace="${openair.apiNamespace}" apiKey="${openair.apiKey}"  connectionTimeout="${openair.connectionTimeout}" readTimeout="${openair.readTimeout}" doc:name="OpenAir: Configuration"/>
	<context:property-placeholder location="openair-credentials.properties" />
	<http:listener-config name="HTTP_Listener_Configuration"
	host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration" />

	<flow name="openair-connector-addFlow">
		<http:listener config-ref="HTTP_Listener_Configuration"
		path="/" doc:name="HTTP" />
		<dw:transform-message doc:name="Transform Message">
		<dw:set-payload resource="addRequest.dwl" />
		</dw:transform-message>
		<openair:add config-ref="OpenAir__Configuration" oaObject="OpenAir||add||oaCategory"
		doc:name="OpenAir" />
		<dw:transform-message doc:name="Transform Message">
		<dw:set-payload resource="addResponse.dwl" />
		</dw:transform-message>
</flow>
</mule>
----

== 另请参阅
*  link:http://www.openair.com/download/NetSuiteOpenAirSOAPAPIGuide.pdf[NetSuite OpenAir SOAP API指南]
* 详细了解如何使用 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]。
